--- a/fast_stable_diffusion_relaxed_Marsey_edition.ipynb
+++ b/fast_stable_diffusion_relaxed_Marsey_edition.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "machine_shape": "hm"
     },
     "kernelspec": {
       "name": "python3",
@@ -34,13 +35,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "Y9EBc437WDOs",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9caf59bd-d89f-43c9-a19f-7743f7dfec57"
+        "outputId": "6e784ca1-ac1a-46fe-c733-3dfa538d6d08"
       },
       "outputs": [
         {
@@ -76,7 +77,7 @@
       "metadata": {
         "id": "CFWtw-6EPrKi"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -85,17 +86,42 @@
         "#@markdown # Model Download\n",
         "\n",
         "%cd /content/gdrive/MyDrive/stable-diffusion-webui/models/ldm/stable-diffusion-v1\n",
-        "! wget https://models.rdra.ma/finetuned.ckpt -O model.ckpt"
+        "! wget https://models.rdra.ma/finetuned.ckpt -O model.ckpt\n",
+        "!ls -la /content/gdrive/MyDrive/stable-diffusion-webui/models/ldm/stable-diffusion-v1/model.ckpt\n"
       ],
       "metadata": {
-        "id": "p4wj_txjP3TC"
+        "id": "p4wj_txjP3TC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "92798dc0-074e-4115-ba39-040526fcba4a"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/gdrive/MyDrive/stable-diffusion-webui/models/ldm/stable-diffusion-v1\n",
+            "--2022-09-29 08:29:16--  https://models.rdra.ma/finetuned.ckpt\n",
+            "Resolving models.rdra.ma (models.rdra.ma)... 172.67.190.87, 104.21.73.153, 2606:4700:3031::6815:4999, ...\n",
+            "Connecting to models.rdra.ma (models.rdra.ma)|172.67.190.87|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 4265380128 (4.0G)\n",
+            "Saving to: ‘model.ckpt’\n",
+            "\n",
+            "model.ckpt          100%[===================>]   3.97G  1.08MB/s    in 54m 5s  \n",
+            "\n",
+            "2022-09-29 09:23:21 (1.25 MB/s) - ‘model.ckpt’ saved [4265380128/4265380128]\n",
+            "\n",
+            "-rw------- 1 root root 4265380128 Sep 29 01:22 /content/gdrive/MyDrive/stable-diffusion-webui/models/ldm/stable-diffusion-v1/model.ckpt\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "ZGV_5H4xrOSp"
       },
@@ -197,7 +223,7 @@
         "id": "a---cT2rwUQj",
         "cellView": "form"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -630,9 +656,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1402fe19-3b9c-42d5-b962-3cf442f8d8a4"
+        "outputId": "616cfb2a-b949-4dcb-96a1-55c8adfba2fe"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -651,12 +677,11 @@
         "!python /content/gdrive/MyDrive/stable-diffusion-webui/scripts/Relaxed.py"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "PjzwxTkPSPHf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "199aca26-259c-4476-f8e5-fd61db12ad7d"
+        "outputId": "a0be7bb8-aff0-409f-d312-9b6511a21027"
       },
       "execution_count": null,
       "outputs": [
@@ -674,9 +699,13 @@
             "Working with z of shape (1, 4, 32, 32) = 4096 dimensions.\n",
             "making attention of type 'vanilla' with 512 in_channels\n",
             "Running on local URL:  http://127.0.0.1:8090\n",
-            "Running on public URL: https://11225.gradio.app\n",
+            "Running on public URL: https://11276.gradio.app\n",
             "\n",
-            "This share link expires in 72 hours. For free permanent hosting, check out Spaces: https://huggingface.co/spaces\n"
+            "This share link expires in 72 hours. For free permanent hosting, check out Spaces: https://huggingface.co/spaces\n",
+            "Iteration: 1/1\n",
+            "100% 35/35 [00:14<00:00,  2.49it/s]\n",
+            "Iteration: 1/1\n",
+            "100% 35/35 [00:10<00:00,  3.45it/s]\n"
           ]
         }
       ]
